# Space

./: Dev_Plan.md  ProjectDescription.txt  README.md
Space/: CMakeLists.txt  main.cpp  run.sh
Space/Animation/: CMakeLists.txt
Space/Animation/ComplexAnimation/: ComplexAnimation.cpp  ComplexAnimation.h
Space/Animation/SimplAnimation/: SimplAnimation.cpp
Space/Animation/SimpleAnimation/: SimpleAnimation.cpp
Space/Controllers/: CMakeLists.txt
Space/Controllers/Action/: Action.cpp
Space/Controllers/AnimationController/: AnimationController.cpp
Space/Controllers/EventController/: EventController.cpp  EventController.h
Space/Controllers/GameController/: GameController.cpp  GameController.h
Space/Controllers/GameController/BotController/: BotController.cpp  BotController.h
Space/Controllers/GameController/PlayerController/: PlayerController.cpp  PlayerController.h
Space/Controllers/ImageController/: ImageController.cpp  ImageController.h
Space/Game/: CMakeLists.txt  Game.cpp
Space/Game/GameScene/: GameScene.cpp
Space/Game/GameScene/Chunk/: Chunk.cpp  Chunk.h
Space/Game/GameScene/MiniMap/: MiniMap.cpp  MiniMap.h
Space/Game/Scene/: Scene.cpp
Space/GameObjects/: CMakeLists.txt  GameObject.cpp  GameObject.h
Space/GameObjects/UI/: CMakeLists.txt  UI.cpp
Space/GameObjects/UI/Button/: Button.cpp  Button.h
Space/GameObjects/UI/Text/: Text.cpp
Space/GameObjects/UI/UIBox/: UIBox.cpp  UIBox.h
Space/GameObjects/Unit/: Unit.cpp
Space/GameObjects/Unit/Asteroid/: asteroid.cpp  asteroid.h
Space/GameObjects/Unit/Parts/: Parts.cpp  Parts.h
Space/GameObjects/Unit/Planet/: planet.cpp  planet.h
Space/GameObjects/Unit/PlayerPortal/: playerPortal.cpp
Space/GameObjects/Unit/SpaceShip/: SpaceShip.cpp
Space/GameObjects/Unit/Star/: star.cpp  star.h
Space/Geometry/: CMakeLists.txt  Geometry.cpp  Geometry.h
Space/Graphics/: CMakeLists.txt  Graphics.cpp  Graphics.h
Space/Graphics/Color/: Color.cpp  Color.h
Space/Graphics/Image/: Image.cpp
Space/cmake_modules/: FindSFML.cmake
Space/include/: Action.h  AnimationController.h  Game.h  GameScene.h  Image.h  Scene.h  SimplAnimation.h  SimpleAnimation.h  SpaceShip.h  Text.h  UI.h  Unit.h  playerPortal.h
